--- a/manifest.json
+++ b/manifest.json
@@ -7,9 +7,7 @@
     "activeTab",
     "scripting",
     "storage",
-    "cookies",
-    "http://*/*",
-    "https://*/*"
+    "cookies"
   ],
   "background": {
     "service_worker": "background.js"
